# fastapi_weather

./: Dockerfile  Makefile  README.md  build_image.sh  pyproject.toml  requirements.txt  weather_api.py
.github/workflows/: main.yml
tests/: test_weather_api.py
weather/: config.py  openweather.py  server.py
